envrc: watch dev-shell

--- a/.envrc
+++ b/.envrc
@@ -1,1 +1,3 @@
-use flake "./dev-shell?rev=$(git log -1 --format=%H dev-shell/)"
+flake_path=./dev-shell
+use flake "$flake_path?rev=$(git log -1 --format=%H $flake_path)"
+watch_file $flake_path/flake.*
